# wfplug-squeek

./: meson.build
data/: meson.build
debian/: changelog  control  copyright  rules
po/: POTFILES.in  meson.build
src/: meson.build  squeek.cpp  squeek.hpp
